# couchstore

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  config.cmake.h.in  config_static.h  configure.ac  csdata.md  file_format.md  libcouchstore.pc.in  view_format.md
config/: autorun.sh
couchstore.xcodeproj/: project.pbxproj
couchstore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/libcouchstore/: couch_btree.h  couch_common.h  couch_db.h  couch_index.h  couch_latency.h  error.h  file_ops.h  visibility.h
m4/: couchbase.m4  pandora_have_liblua.m4
programs/: CMakeLists.txt
programs/dbdiff/: CMakeLists.txt  dbdiff.c
python/: couchstore.py  couchstore_test.py  example1.py  example_read.py
src/: arena.c  arena.cc  arena.h  bitfield.c  bitfield.cc  bitfield.h  btree_modify.c  btree_modify.cc  btree_read.c  btree_read.cc  byteswap.c  collate_json.c  collate_json.h  compactor.c  compactor.cc  couch_btree.h  couch_common.h  couch_create.cc  couch_db.c  couch_db.cc  couch_db.h  couch_file_read.c  couch_file_read.cc  couch_file_write.c  couch_file_write.cc  couch_index.c  couch_latency.cc  couch_latency_internal.h  couch_save.c  couch_save.cc  couchscript.cc  crc32.c  crc32.cc  crc32.h  db_compact.c  db_compact.cc  dbck.cc  dbdump.c  dbdump.cc  dbinfo.c  (+47 more)
src/rfc1321/: global.h  md5.h  md5c.c
src/snappy/: config.h  config.h.in  stamp-h2
src/views/: bitmap.c  bitmap.h  collate_json.c  collate_json.cc  collate_json.h  compaction.c  compaction.h  file_merger.c  file_merger.cc  file_merger.h  file_sorter.c  file_sorter.h  index_header.c  index_header.cc  index_header.h  keys.c  keys.cc  keys.h  purgers.c  purgers.h  reducers.c  reducers.cc  reducers.h  reductions.c  reductions.cc  reductions.h  sorted_list.c  sorted_list.h  spatial.c  spatial.cc  spatial.h  spatial_modify.c  spatial_modify.cc  util.c  util.cc  util.h  values.c  values.cc  values.h  view_group.c  (+2 more)
src/views/mapreduce/: mapreduce.cc  mapreduce.h  mapreduce_c.cc  mapreduce_internal.h  visibility.h
tests/: bulk.lua  changecount.py  changessincefilter.lua  collate_json_test.c  compact.lua  corrupt.lua  couchstoredoctest.h  couchstoretest.cc  couchstoretest.h  documents.cc  documents.h  dropdel.lua  file_deduper_tests.c  file_merger_tests.c  file_sorter_tests.c  file_tests.h  gtest_internal_tests.cc  gtest_tests.cc  indexer_test.c  large.lua  largefile.lua  localdoc.lua  macros.h  purge.py  rewind.py  test_fileops.cc  test_fileops.h  testapp.c  testlib.lua  v8ver.cc  wrapped_fileops_test.cc  wrapped_fileops_test.h
tests/btree_purge/: purge.c  purge.cc  purge_tests.h  tests.c  tests.cc
tests/mapreduce/: builtin.c  map.c  mapreduce_tests.h  reduce.c  tests.c
tests/views/: bitmaps.c  bitmaps.cc  cleanup.c  cleanup.cc  collate_json_test.c  collate_json_test.cc  index_headers.c  index_headers.cc  keys.c  keys.cc  reducers.c  reducers.cc  reductions.c  sorted_lists.c  sorted_lists.cc  spatial.c  spatial.cc  spatial_tests.h  tests.c  tests.cc  values.c  view_tests.h
win32/: win32.c  win32.h
